--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
@@ -28,6 +29,7 @@
     "nanoid": "^4.0.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.8.0",
-    "qrcode": "^1.5.1"
+    "passport": "^0.5.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
