--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "upvote-session",
+  "name": "game-store",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -30,6 +30,7 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.5.0",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth2": "^0.2.0",
+    "slugify": "^1.6.5"
   }
 }
